--- a/package.json
+++ b/package.json
@@ -4,24 +4,27 @@
   "description": "Assemble API Blueprint specifications with concatenation, templating, and inheritance.",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha --reporter spec test/suite.js",
-    "install": "napa"
+    "test": "node_modules/.bin/mocha --reporter spec test/suite.js -t 100000"
   },
   "author": "Eric Weber, Shiraj Ganguly, Paul Miard",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "^2.9.27",
+    "bluebird": "^3.5.0",
     "commander": "^2.8.1",
     "content-tree": "0.0.1",
+    "drafter.js": "^2.6.7",
+    "fury": "2.3.0",
+    "fury-adapter-apiary-blueprint-parser": "^2.0.0",
+    "fury-adapter-apib-parser": "^0.7.0",
+    "fury-adapter-apib-serializer": "0.3.0",
     "handlebars": "^3.0.3",
     "lodash": "^3.6.0",
+    "mim": "^0.3.1",
     "mime": "^1.3.4",
+    "minim-api-description": "^0.3.1",
+    "minim-parse-result": "0.2.2",
     "napa": "^1.2.0",
-    "protagonist": "1.5.0",
     "request": "^2.57.0"
-  },
-  "napa": {
-    "matter_compiler": "https://github.com/apiaryio/matter_compiler.git"
   },
   "directories": {
     "test": "test"
