--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "bluebird": "^2.9.27",
     "commander": "^2.8.1",
     "content-tree": "0.0.1",
+    "drafter.js": "^2.6.7",
     "handlebars": "^3.0.3",
     "lodash": "^3.6.0",
     "mime": "^1.3.4",
     "napa": "^3.0.0",
-    "protagonist": "1.5.0",
     "request": "^2.57.0"
   },
   "napa": {
