--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lodash": "^3.6.0",
     "mime": "^1.3.4",
     "napa": "^1.2.0",
-    "request": "^2.57.0"
+    "request": "2.57.0"
   },
   "napa": {
     "matter_compiler": "https://github.com/apiaryio/matter_compiler.git"
